--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -122,13 +122,20 @@ $navsize: 56px;
     width: 100%;
     background: lighten($atblue, 3);
     color: #fff;
+    display: flex;
+    flex-direction: column;
 
     h2 {
       color: rgba(255,255,255,0.7);
       text-transform: uppercase;
       font-size: 14px;
-      margin: 20px 0 5px;
+      margin: 20px 0 0;
       text-indent: 13px;
+    }
+
+    ul {
+      overflow-y: auto;
+      padding: 5px 0;
     }
 
     li {
@@ -196,7 +203,7 @@ $navsize: 56px;
       }
     }
     &.activepane nav {
-      display: block;
+      display: flex;
     }
     a:after {
       content: "›";
@@ -214,9 +221,12 @@ $navsize: 56px;
         background: #1d2e3d;
         text-transform: none;
         color: #fff;
-        margin: 0 0 10px;
+        margin: 0 0 0;
         line-height: 48px;
         padding-top: 4px;
+      }
+      ul {
+        padding: 10px 0;
       }
     }
   }
@@ -225,4 +235,7 @@ $navsize: 56px;
 .station {
   flex: 1;
   background: #fff;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
